# DrakonixAnvil

./: .gitignore  CF-PARTNER-REQUIREMENT.md  CONTEXT-AGSKIES-ERROR.md  CONTEXT-RENAME-PLAN.md  CONTEXT.md  Cargo.toml  FEATURECANDIDATES.md  IDEAS.md  MEMORY.md  ORPHAN-SERVERS.md  PLAN-curseforge-browser.md  PLAN1.md  PROMPT.md  README.md  TEMPPLAN.md  justfile
.github/workflows/: ci.yml  release.yml
scripts/: delete-everything-but-settings-json.bash
src/: app.rs  backup.rs  config.rs  curseforge.rs  main.rs  modrinth.rs  pack_installer.rs  rcon.rs
src/docker/: mod.rs
src/server/: mod.rs
src/templates/: mod.rs
src/ui/: cf_browse.rs  dashboard.rs  mod.rs  mr_browse.rs  server_create.rs  server_edit.rs
