[package]
name = "drakonix-anvil"
version = "0.7.2"
edition = "2021"
description = "A cross-platform GUI tool for deploying, managing, and backing up multiple Minecraft servers with Docker"
license = "MIT"
repository = "https://github.com/meltingscales/DrakonixAnvil"

[dependencies]
# GUI
eframe = "0.29"
egui_extras = { version = "0.29", features = ["all_loaders"] }
image = { version = "0.25", features = ["jpeg", "png"] }

# Docker
bollard = "0.18"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Time
chrono = "0.4"

# Minecraft server status
rust-mc-status = "2.0"

# Backup/restore
zip = "2.0"
walkdir = "2"

# RCON password generation
rand = "0.8"

# HTTP client (for downloading modpacks on host side)
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }

# Native file dialogs (export/import)
rfd = "0.15"

# Cross-platform file/folder opening
open = "5"
